[tool.poetry]
name = "machine-learning"
version = "0.1.0"
description = "My ML experiments"
authors = ["Premkumar Masilamani <prem@smileprem.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^0.25.3"
sklearn = "^0.0"
flake8 = "^3.7.9"
black = "^19.10b0"
matplotlib = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"
rope = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
